# EPFL-RT-Driverless

./: .canceledtravis.yml  .gitignore  .travis.yml  QuickGitGuide.md  README.md  SetupGuide.md
.github/workflows/: Example.yml  test.yml
C++ProjectExample/: CMakeLists.txt
C++ProjectExample/cmake/: CodeCoverage.cmake
C++ProjectExample/tests/: CMakeLists.txt
Communication/: .gitignore
Communication/src/: tcp_client_sensor_sampler.py  tcp_client_wrapper.py  tcp_server.py  tcplib.py
Control/: .gitignore
Control/PIDControl/: .gitignore  CMakeLists.txt
Control/PIDControl/src/: CMakeLists.txt  StanleyPid.cpp  StanleyPid.hpp  main.cpp  spline.hpp  utils.cpp  utils.hpp
Control/PIDControl/tests/: CMakeLists.txt
Control/PIDPython/: StanleyPIDPython.py  inputs.csv  longitudinalErrors.csv  pidTerms.csv  splinePoints.csv  states.csv
Control/StanleyPID/: .gitignore  StanleyPIDPython.py  enums.py  skidpadAnimation.py  skidpadGeneration.py  test.py
Control/src/: control_wrapper.py  mpc_robot_model.py  rt_control_map.py  tcplib.py
Motion_estimation/src/: motion_estimation.py
OtherC++Project/: main.cpp  main_test.cpp
Perception/Lidar/: Lidar data processing.ipynb
Perception/Perspective-n-Point/: PnP.ipynb
Perception/simgle_camera_depth_estimation/: Single camera depth estimation.ipynb
Perception/src/: config.yaml  coordstransforms.py  formula_student-computer_vision.yml  yolo_example.py
Perception/yolov5/: README.md
PythonProjectExample/src/: main.py
PythonProjectExample/test/: test_main.py
RTMaps_modules/: template.py
RTMaps_unittesting_example/: createPickleFiles.py  fakeBaseComponent.py  fakeRTMaps.py  source.py  test.py
SLAM/: README.md  __init__.py  rtmaps.py  slam.py  tcplib.py  utils.py
SLAM/communication/: SLAM.py  SLAM_tcp_client_wrapper.py
SLAM/fastslam/: __init__.py  fastslam.py  predict.py  resampling.py  update.py
SLAM/graphslam/: graphslam.py
SLAM/inputs/: input_generation.ipynb  perception.pkl
SLAM/racetracks/: abudhabi.csv
SLAM/tests/: test.py  test2.py  test_slam.py
Simulation/: README.md  World generator.ipynb  base_world_data_template.txt  circle_track_cones.wbt  cone_coordinates.csv  robot_structure_template.txt  track generation_old.ipynb
Simulation/.ipynb_checkpoints/: track generation-checkpoint.ipynb
Simulation/tracks/: berlin_2018.csv  (+3 more)
SomeC++Project/test/testfoo/: CMakeLists.txt
SomePythonProjectCoveralls/: .coveragerc  coverage.xml
general/: tcp_client_wrapper.py  tcp_server.py  tcplib.py
perception/: RektNetLib.py  YoloLib.py  main.py  reknet_example.py
(+80 files in other folders)
